-----------------------------------------------------------------------
*** ecasound - changes and additions to libecasound interface       ***
-----------------------------------------------------------------------

2000-10-10  Kai Vehmanen <kaiv@wakkanet.fi>

	* dynamic-parameters.h (): now inherits DEFINITION_BY_CONTRACT
	* dynamic-parameters.h (default_parameter_range,is_toggle): moved
	to OPERATOR
	* dynamic-parameters.h (map_parameters, get_parameter_id): removed
	* dynamic-parameters.h (get_parameter_name): changed prototype
	
2000-10-10  Kai Vehmanen <kaiv@wakkanet.fi>

	* audioio-types.h (AUDIO_IO_DEVICE): is_running(), is_prepared(),
	toggle_running_state() and toggle_prepared_state() added
	* eca-chainsetup.h (enable): changed exception specification
	* eca-session.h (connect_chainsetup): changed exception specification
	
2000-10-08  Kai Vehmanen <kaiv@wakkanet.fi>
	
	* eca-version.h (): added version numbering as C defines
	* audioio-plugin.h (audio_io_interface_version): added
	* eca-object-map.h (object): added a second argument; affects
	
2000-10-07  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-error.h (all): classes made non-virtual, many other big changes
	* audioio-mikmod.h (MIKMOD_INTERFACE): default_mikmod_path and 
	default_mikmod_args combined into default_mikmod_cmd)
	* audioio-timidity.h (all): a new file
	* audioio.h (all): various changes and code cleanups
	* audioio-forked-stream.h (all): new file
	other object map classes
				
2000-09-24  Kai Vehmanen <kaiv@wakkanet.fi>

	* audiofx_timebased.h (EFFECT_MODULATING_DELAY): constructor
	parameters changed
	
2000-09-17  Kai Vehmanen <kaiv@wakkanet.fi>

	* library version changed to 7:0:0
	* eca-object-factory.h (): new file
	* eca-chainop.h (CHAIN_OPERATOR): dropped inheritance of
	ECA_AUDIO_FORMAT
	* audiofx.h (set_samples_per_second,samples_per_second): added
	* audiofx.h (set_channels,channels): added
	* eca-chainsetup.h (add_default_output): added